{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 186,
  "lineage": "6bf24f32-ee4d-dc4f-0cbf-21b68dfafbb8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Day2_EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e74c1fa37702d633",
            "association_id": "eipassoc-0c36b21a63153cd86",
            "domain": "vpc",
            "id": "eipalloc-0e74c1fa37702d633",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-018367beaeb42beb0",
            "private_dns": "ip-10-0-0-10.ap-south-1.compute.internal",
            "private_ip": "10.0.0.10",
            "public_dns": "ec2-43-204-168-250.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.204.168.250",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Day2_NAT_EIP"
            },
            "tags_all": {
              "Name": "Day2_NAT_EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_instance_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0932982a6e9e2e0f4",
            "association_id": "eipassoc-013b65e9c927ce718",
            "domain": "vpc",
            "id": "eipalloc-0932982a6e9e2e0f4",
            "instance": "i-0ce4cc1774e3b805c",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-057a1b737e080df57",
            "private_dns": "ip-10-0-0-8.ap-south-1.compute.internal",
            "private_ip": "10.0.0.8",
            "public_dns": "ec2-52-66-162-65.ap-south-1.compute.amazonaws.com",
            "public_ip": "52.66.162.65",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.Day2_PUBS_Bastion_host",
            "aws_security_group.Day2_SG_SSH_BH",
            "aws_subnet.Day2_PUBS",
            "aws_vpc.Day2_VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Day2_PRIS_EC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e670eb768a5fc3d4",
            "arn": "arn:aws:ec2:ap-south-1:549395784991:instance/i-0a93315b3f9252642",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a93315b3f9252642",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Project1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c482ea1da19e35ea",
            "private_dns": "ip-10-0-0-138.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.138",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05df0eed50a7a9421",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-05c30e61bdb9cb02a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-018e9425767bafa53",
            "tags": {
              "Name": "Day2_PRIS_EC2"
            },
            "tags_all": {
              "Name": "Day2_PRIS_EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05c30e61bdb9cb02a"
            ]
          },
          "dependencies": [
            "aws_security_group.Day2_SG_SSH_BH",
            "aws_security_group.Day2_SG_SSH__FROM_BH",
            "aws_subnet.Day2_PRIS",
            "aws_vpc.Day2_VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Day2_PUBS_Bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e670eb768a5fc3d4",
            "arn": "arn:aws:ec2:ap-south-1:549395784991:instance/i-0ce4cc1774e3b805c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ce4cc1774e3b805c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Project1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-057a1b737e080df57",
            "private_dns": "ip-10-0-0-8.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.8",
            "public_ip": "13.234.238.1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02490aceca53b914b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0af247265077a1b23"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0147731195e48e704",
            "tags": {
              "Name": "Day2_PUBS_Bastion_host"
            },
            "tags_all": {
              "Name": "Day2_PUBS_Bastion_host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0af247265077a1b23"
            ]
          },
          "dependencies": [
            "aws_security_group.Day2_SG_SSH_BH",
            "aws_subnet.Day2_PUBS",
            "aws_vpc.Day2_VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Day2_IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:549395784991:internet-gateway/igw-074d4bffd5742af22",
            "id": "igw-074d4bffd5742af22",
            "owner_id": "549395784991",
            "tags": {
              "Name": "Day2_IG"
            },
            "tags_all": {
              "Name": "Day2_IG"
            },
            "vpc_id": "vpc-0d55be1df846dc091"
          },
          "dependencies": [
            "aws_vpc.Day2_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "Day2_PRIS_NATGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e74c1fa37702d633",
            "association_id": "eipassoc-0c36b21a63153cd86",
            "connectivity_type": "public",
            "id": "nat-01d959659e24ab227",
            "network_interface_id": "eni-018367beaeb42beb0",
            "private_ip": "10.0.0.10",
            "public_ip": "43.204.168.250",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0147731195e48e704",
            "tags": {
              "Name": "Day2_PRIS_NATGW"
            },
            "tags_all": {
              "Name": "Day2_PRIS_NATGW"
            }
          },
          "dependencies": [
            "aws_eip.Day2_EIP",
            "aws_subnet.Day2_PUBS",
            "aws_vpc.Day2_VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Day2_RT_IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:549395784991:route-table/rtb-0ad51bbf9d7019e0a",
            "id": "rtb-0ad51bbf9d7019e0a",
            "owner_id": "549395784991",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-074d4bffd5742af22",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Day2_RT_IG"
            },
            "tags_all": {
              "Name": "Day2_RT_IG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d55be1df846dc091"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Day2_IG",
            "aws_vpc.Day2_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Day2_RT_NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:549395784991:route-table/rtb-0ca2beb0f43346a11",
            "id": "rtb-0ca2beb0f43346a11",
            "owner_id": "549395784991",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-01d959659e24ab227",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Day2_RT_NAT"
            },
            "tags_all": {
              "Name": "Day2_RT_NAT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d55be1df846dc091"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.Day2_EIP",
            "aws_nat_gateway.Day2_PRIS_NATGW",
            "aws_subnet.Day2_PUBS",
            "aws_vpc.Day2_VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Adding_to_Day2_PRIS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0986cd5e4932f3b9b",
            "route_table_id": "rtb-0ca2beb0f43346a11",
            "subnet_id": "subnet-018e9425767bafa53"
          },
          "dependencies": [
            "aws_eip.Day2_EIP",
            "aws_nat_gateway.Day2_PRIS_NATGW",
            "aws_route_table.Day2_RT_NAT",
            "aws_subnet.Day2_PRIS",
            "aws_subnet.Day2_PUBS",
            "aws_vpc.Day2_VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Adding_to_Day2_PUBS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0649d8b480255fbdc",
            "route_table_id": "rtb-0ad51bbf9d7019e0a",
            "subnet_id": "subnet-0147731195e48e704"
          },
          "dependencies": [
            "aws_internet_gateway.Day2_IG",
            "aws_route_table.Day2_RT_IG",
            "aws_subnet.Day2_PUBS",
            "aws_vpc.Day2_VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Day2_SG_SSH_BH",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:549395784991:security-group/sg-0af247265077a1b23",
            "description": "Allow ssh to bastion host as it is in Public subnet",
            "egress": [],
            "id": "sg-0af247265077a1b23",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Allow ssh",
            "name_prefix": "",
            "owner_id": "549395784991",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d55be1df846dc091"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Day2_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Day2_SG_SSH__FROM_BH",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:549395784991:security-group/sg-05c30e61bdb9cb02a",
            "description": "Allow SSH from Bastion host to private EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c30e61bdb9cb02a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0af247265077a1b23"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Allow SSH to private EC2",
            "name_prefix": "",
            "owner_id": "549395784991",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d55be1df846dc091"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Day2_SG_SSH_BH",
            "aws_vpc.Day2_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Day2_PRIS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:549395784991:subnet/subnet-018e9425767bafa53",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.128/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018e9425767bafa53",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "549395784991",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Day2_PRIS"
            },
            "tags_all": {
              "Name": "Day2_PRIS"
            },
            "vpc_id": "vpc-0d55be1df846dc091"
          },
          "dependencies": [
            "aws_vpc.Day2_VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Day2_PUBS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:549395784991:subnet/subnet-0147731195e48e704",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0147731195e48e704",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "549395784991",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Day2_PUBS"
            },
            "tags_all": {
              "Name": "Day2_PUBS"
            },
            "vpc_id": "vpc-0d55be1df846dc091"
          },
          "dependencies": [
            "aws_vpc.Day2_VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Day2_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:549395784991:vpc/vpc-0d55be1df846dc091",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0d5b9eebb8c5c4fca",
            "default_route_table_id": "rtb-0c86af48d173374e1",
            "default_security_group_id": "sg-0c0df0aa655d56247",
            "dhcp_options_id": "dopt-013306c3265fdedcc",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d55be1df846dc091",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c86af48d173374e1",
            "owner_id": "549395784991",
            "tags": {
              "Name": "Day2_VPC"
            },
            "tags_all": {
              "Name": "Day2_VPC"
            }
          }
        }
      ]
    }
  ]
}